fix bug in card spacing & images, mobile re-align

--- a/styles/main.css
+++ b/styles/main.css
@@ -192,6 +192,10 @@
 
 }
 
+.card-image{
+  min-height: 125px;
+}
+
 
 .skills_image{
 	float: left;
